--- a/index.html
+++ b/index.html
@@ -10,43 +10,10 @@
   <link rel="manifest" href="manifest.json">
 
   <!-- ! Icons -->
-  <link rel="icon" type="image/png" href="/icon.png" sizes="256x256">
+  <link rel="icon" type="image/png" href="icon.png" sizes="256x256">
 
   <!-- ! CSS -->
-  <style>
-
-  :root {
-    --debug-outline: 0px;
-    --font-size: 16px;
-    --foreground-colour: rgb(255, 255, 255);
-    --background-colour: rgb(48, 48, 48);
-    --font-family: monospace, sans-serif;
-    --font-weight: 400;
-    --scrollbar-colour: rgb(84, 93, 103) var(--background-colour);
-  }
-
-  html, body {
-    height: 100%;
-    width: 100%;
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    overflow: auto;
-    background-color: var(--background-colour);
-    color: var(--foreground-colour);
-    font-family: var(--font-family);
-    font-size: var(--font-size);
-    font-weight: var(--font-weight);
-    scrollbar-color: var(--scrollbar-colour);
-    box-shadow: inset 0 0 0 var(--debug-outline) var(--foreground-colour);
-  }
-
-  #page {
-    height: 100%;
-    width: 100%;
-  }
-
-  </style>
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
@@ -57,17 +24,7 @@
   </div>
 
   <!-- ! JavaScript -->
-  <script>
-
-  // Initialisation function to be called when the DOM has loaded
-  function init() {
-    
-  }
-
-  // Add listener to call init function when the DOM has loaded
-  document.addEventListener('DOMContentLoaded', init);
-
-  </script>
+  <script src="script.js"></script>
 
 </body>
 </html>
