--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <!-- ! HTML -->
   <div id="page">
     <div>test</div>
+    <img src="icon.png" alt="Icon Image" width="256" height="256">
   </div>
 
   <!-- ! JavaScript -->
