--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <div id="page">
     <div>test</div>
     <img src="icon.png" alt="Icon Image" width="256" height="256">
+    <div id="online-check"></div>
   </div>
 
   <!-- ! JavaScript -->
