updated online check

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div id="page">
     <div>test</div>
     <img src="icon.png" alt="Icon Image" width="256" height="256">
-    <div id="online-check"></div>
+    <button role="button" id="online-check-button">Check Online</button>
   </div>
 
   <!-- ! JavaScript -->
